--- a/boxshow/index.html
+++ b/boxshow/index.html
@@ -1,34 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="i=device-width, initial-scale=1.0">
-    <title>box show </title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="i=device-width, initial-scale=1.0" />
+    <title>box show</title>
     <style>
-        .container{
-            display: flex;
-        }
-        .item{
-            padding: 21px 12px;
-            border: 2px solid rgb(66, 16, 108);
-            margin: 21px 12px;
-            box-shadow: 12px 18px 13px 5px #5608e5;
-            text-shadow: 10px 10px orange;
-        }
+      .container {
+        display: flex;
+      }
+      .item {
+        padding: 21px 12px;
+        border: 2px solid rgb(66, 16, 108);
+        margin: 21px 12px;
+        box-shadow: 12px 18px 13px 5px #5608e5;
+        text-shadow: 5px 5px orange;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="item" id="item-1"><h2>card-1</h2><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit praesentium exercitationem inventore blanditiis sunt. Possimus a ratione in ea, voluptate minima repudiandae. Doloremque vel quasi perspiciatis voluptatem quos ratione? Deserunt, nemo?
-
-        </p> </div>
-        <div class="item" id="item-2"><h2>card-2</h2><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit praesentium exercitationem inventore blanditiis sunt. Possimus a ratione in ea, voluptate minima repudiandae. Doloremque vel quasi perspiciatis voluptatem quos ratione? Deserunt, nemo?
-
-        </p></div>
-        <div class="item" id="item-3"><h2>card-3</h2><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit praesentium exercitationem inventore blanditiis sunt. Possimus a ratione in ea, voluptate minima repudiandae. Doloremque vel quasi perspiciatis voluptatem quos ratione? Deserunt, nemo?
-
-        </p></div>
+      <div class="item" id="item-1">
+        <h2>card-1</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit
+          praesentium exercitationem inventore blanditiis sunt. Possimus a
+          ratione in ea, voluptate minima repudiandae. Doloremque vel quasi
+          perspiciatis voluptatem quos ratione? Deserunt, nemo?
+        </p>
+      </div>
+      <div class="item" id="item-2">
+        <h2>card-2</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit
+          praesentium exercitationem inventore blanditiis sunt. Possimus a
+          ratione in ea, voluptate minima repudiandae. Doloremque vel quasi
+          perspiciatis voluptatem quos ratione? Deserunt, nemo?
+        </p>
+      </div>
+      <div class="item" id="item-3">
+        <h2>card-3</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit
+          praesentium exercitationem inventore blanditiis sunt. Possimus a
+          ratione in ea, voluptate minima repudiandae. Doloremque vel quasi
+          perspiciatis voluptatem quos ratione? Deserunt, nemo?
+        </p>
+      </div>
     </div>
-</body>
+  </body>
 </html>
